--- a/Presentations/DrugUtilisation.qmd
+++ b/Presentations/DrugUtilisation.qmd
@@ -28,6 +28,11 @@ editor: visual
 
 ```{r, echo = FALSE}
 options(width = 120)
+library(visOmopResults)
+library(gt)
+library(ggplot2)
+library(plotly)
+library(flaxtable)
 ```
 
 Drug Utilisation Studies (DUS) were defined by the World Health Organization as studying the marketing, distribution, prescription, and use of medicinal products in a society, with special emphasis on the resulting medical and socioeconomic consequences (WHO, 2003).
