--- a/Presentations/DrugUtilisation.qmd
+++ b/Presentations/DrugUtilisation.qmd
@@ -16,7 +16,7 @@ format:
     footer: |
       <div style="position: relative; width: 100%;">
         <div style="text-align: center; font-weight: 500;">Drug Utilisation R package</div>
-        <div style="position: fixed; top: 20px; right: 20px;"><a href="index.qmd" style="text-decoration: none;">⬅ Back to Training website</a></div>
+        <div style="position: fixed; top: 20px; right: 20px;"><a href="index.qmd" style="text-decoration: none;">⬅ Presentations</a></div>
       </div>
 execute:
   echo: true
@@ -33,6 +33,7 @@ library(gt)
 library(ggplot2)
 library(plotly)
 library(flextable)
+library(extrafont)
 ```
 
 Drug Utilisation Studies (DUS) were defined by the World Health Organization as studying the marketing, distribution, prescription, and use of medicinal products in a society, with special emphasis on the resulting medical and socioeconomic consequences (WHO, 2003).
@@ -275,50 +276,6 @@ Having all this into account the recommended order to apply criteria would be:
 
 <https://darwin-eu-dev.github.io/DrugUtilisation/articles/create_cohorts.html>
 
-## Your turn
-
-Can you create a cohort with all the records of 'simvastatin' concatenating records separated by 90 days or less and the following inclusion criteria:
-
--   First record ever
-
--   At least 365 days of prior observation
-
--   Cohort start date between '2010-01-01' and '2021-12-31'.
-
-```{r, echo = FALSE}
-codelist <- getDrugIngredientCodes(cdm = cdm, name = "simvastatin", nameStyle = "{concept_name}")
-cdm$simvastatin_cohort <- conceptCohort(
-  cdm = cdm, 
-  conceptSet = codelist, 
-  name = "simvastatin_cohort"
-) |>
-  collapseCohorts(gap = 90) |>
-  requireIsFirstEntry() |>
-  requirePriorObservation(minPriorObservation = 365) |>
-  requireInDateRange(dateRange = as.Date(c('2010-01-01', '2021-12-31')))
-cohortCount(cdm$simvastatin_cohort)
-```
-
-<details>
-
-<summary>💡 Click to see solution</summary>
-
-```{r}
-codelist <- getDrugIngredientCodes(cdm = cdm, name = "simvastatin", nameStyle = "{concept_name}")
-cdm$simvastatin_cohort <- conceptCohort(
-  cdm = cdm, 
-  conceptSet = codelist, 
-  name = "simvastatin_cohort"
-) |>
-  collapseCohorts(gap = 90) |>
-  requireIsFirstEntry() |>
-  requirePriorObservation(minPriorObservation = 365) |>
-  requireInDateRange(dateRange = as.Date(c('2010-01-01', '2021-12-31')))
-cohortCount(cdm$simvastatin_cohort)
-```
-
-</details>
-
 ## Drug usage
 
 . . .
@@ -553,50 +510,6 @@ plotProportionOfPatientsCovered(result)
 . . .
 
 `gapEra` parameter can have a big impact in survival analysis, whereas it does not have such big impact on proportion of patients covered.
-
-## Your turn
-
-Can you create a cohort of a certain ingredient and analyse its persistence in the following year?
-
-*suggestions: 'clopidogrel', 'nitroglycerin', 'simvastatin', 'amlodipine', 'verapamil' are the 5 most common ingredients in this database*
-
-```{r, echo=FALSE}
-codelist <- getDrugIngredientCodes(
-  cdm = cdm, 
-  name = c('clopidogrel', 'nitroglycerin', 'simvastatin', 'amlodipine', 'verapamil'),
-  nameStyle = "{concept_name}"
-)
-cdm$persistence <- conceptCohort(
-  cdm = cdm, 
-  name = "persistence",
-  conceptSet = codelist
-)
-result <- summariseProportionOfPatientsCovered(cohort = cdm$persistence, followUpDays = 365)
-plotProportionOfPatientsCovered(result = result, colour = "cohort_name")
-```
-
-## Solution
-
-<details>
-
-<summary>💡 Click to see solution</summary>
-
-```{r}
-codelist <- getDrugIngredientCodes(
-  cdm = cdm, 
-  name = c('clopidogrel', 'nitroglycerin', 'simvastatin', 'amlodipine', 'verapamil'),
-  nameStyle = "{concept_name}"
-)
-cdm$persistence <- conceptCohort(
-  cdm = cdm, 
-  name = "persistence",
-  conceptSet = codelist
-)
-result <- summariseProportionOfPatientsCovered(cohort = cdm$persistence, followUpDays = 365)
-plotProportionOfPatientsCovered(result = result, colour = "cohort_name")
-```
-
-<details>
 
 ## Drug restart and drug switching
 
